
===========
Changes log  
===========


@version-full@ (@release-date@)
[Bugs fixed]
 - Fixed bug when instantiating the secret of a ChallengeResponse.

[Enhancements] 
 - Added new ServletConverter class to facilitate lighter integration of Restlets with Servlet 
   and especially Spring. Inspired from discussions with Ryan Daum, Michael Makunas, 
   Jim Alateras, Shlok and Jonathan Hall.
  
1.0 RC6 (2007-03-21)
[Bugs fixed]
 - Fixed bug with the control of the existence of fragment in setIdentifier method.
 - Fixed bug in ServerServlet failing to set the ServletContextAdapter in some cases.
   Reported by Ryan Daum.
 - Fixed bug with the relative links of the Web representation of the "Bookmarks" resource
   in the book tutorial. Reported by Sean Landis.
 - Fixed potential bug when checking "modification date" condition on a null variant. 
 - Fixed bug with db4o configuration in the book tutorial. Reported by Sean Landis.
 - Fixed potential issue with Request.hostRef.port when the server listening port is 
   different from the port specified in the HTTP Host header. Reported by Thierry Boileau.
 - Fixed NPE when parsing the "content encoding" header. Reported and contributed by Brian Crow.
 - The HTTP client connectors were not correctly sending the content type parameters
   like the "charset" parameter. Reported by Christian Ohr.
      
[API changes]
 - Added MediaType.TEXT_CALENDAR constant for iCalendar events. Suggested by Aron Roberts.
 - Added default constructor to NRE's HttpServerHelper and a setServer() method to
   NRE's ServerHelper. Suggested by Brandon Lonac.
 - Renamed internal NRE's HttpCall.setProtocol() to setVersion().
 - Added Parameter.setName() method.
 - Media type APPLICATION_RDF was renamed to APPLICATION_RDF_XML and TEXT_RDF_N3 was 
   added. Suggested by Ryan Daum.
 - Changed secret type in classes ChallengeResponse and Guard classes from String to char[] according