@@ -7,6 +7,8 @@ Changes log
 @version-full@ (@release-date@)
 [Bugs fixed]
  - Fixed bug when instantiating the secret of a ChallengeResponse.
+ - Fixed bugs in the Servlet-based WAR client which prevented a normal behavior.
+   Now, URIs like "war:///WEB-INF/web.xml".
 
 [Enhancements] 
  - Added new ServletConverter class to facilitate lighter integration of Restlets with Servlet 
